Make delimiter one-sided spacing more consistent

--- a/ekzhang.sty
+++ b/ekzhang.sty
@@ -48,8 +48,8 @@
 \DeclarePairedDelimiter{\cbr}{\{}{\}}
 \DeclarePairedDelimiter{\ang}{\langle}{\rangle}
 \DeclarePairedDelimiter{\abs}{\lvert}{\rvert}
-\DeclarePairedDelimiter{\dabs}{\|}{\|}
-\DeclarePairedDelimiter{\eval}{.}{|}
+\DeclarePairedDelimiter{\dabs}{\lVert}{\rVert}
+\DeclarePairedDelimiter{\eval}{.}{\rvert}
 \DeclarePairedDelimiter{\floor}{\lfloor}{\rfloor}
 \DeclarePairedDelimiter{\ceil}{\lceil}{\rceil}
 
