Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -14,7 +14,7 @@
 
 \section{Introduction}
 \label{sec:intro}
-This is a simple template for personal use. Macros are defined in the \href{run:./ekz.sty}{\texttt{ekzhang.sty}} package.
+This is a simple template for personal use. Macros are defined in the \href{run:./ekzhang.sty}{\texttt{ekzhang.sty}} package.
 
 \section{Math Macros}
 Several math macros have been added to facilitate the typesetting of common expressions. The \verb|\dd| macro produces the differential symbol with proper spacing. The \verb|\dv| and \verb|\pdv| macros can be used to quickly typeset derivatives. Macros have been added for expectation \verb|\E| and variance \verb|\Var|, which automatically surround their argument with brackets.
